--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -2,8 +2,8 @@
 
 body {
 	
-	padding-top: 40px;
-	padding-bottom: 40px;
+	padding-top: 30px;
+	padding-bottom: 30px;
 	background-color: #fefbd8;
 	 
 	 }
@@ -11,6 +11,9 @@ body {
 	max-width: 330px;
 	padding: 15px;
 	margin: 0 auto;
+}
+h2 {
+	text-align: center;
 }
 
 </style>
